k8s/03-gatekeeper/constraint-resource-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: require-resource-limits
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - team-alpha
      - team-beta
  parameters:
    limits: ["cpu", "memory"]
