k8s/03-gatekeeper/constraint-tenant-label.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredTenantLabel
metadata:
  name: require-tenant-label
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - team-alpha
      - team-beta
